06.service.yaml
apiVersion: v1
# 리소스 타입 Service 타입 Service는 외부와 Pod와의 통신을 수행하는 역할을 한다. 
kind: Service
# Service의 메타정보 
metadata:
  # Service의 이름 
  name: MYAPP
  # Service 객체가 배치될 네임스페이스 
  namespace: default
# 서비스 스펙 지정 
spec:
  # 서비스가 어떠한 Pod와 매핑되어야할지 검색하기 위한 조건 
  selector:
    # Pod의 이름 
    app: MYAPP
  # 서비스 타입 
  # ClusterIP: 쿠버네티스 워커들 사이에 통신을 위해서 사용, 외부통신 불가
  # NodePort: Pod가 설치된 Node에 대한 Port 로 지정한다. 외부 통신은 NodePort를 통해서 통신 
  # LoadBalance: 로드밸런서가 제공된 CSP 등의 로드밸런서를 통해서 통신 처리 
  # ExternalName: 외부 호스트의 이름 값이 있는 CNAME 레코드를 반환하도록 클러스터의 DNS서버를 구성한다. 
  type: ClusterIP
  # sessionAffinity는 K8S에서 Sticky 를 제공하기 위한 용도이다. 
  # 클라이언트의 요청을 항상 같은 인스턴스로 전송될 수 있도록 세션을 유지하는 기능이다. 
  # None: 사용하지 않음 --> 매번 다른 인스턴스로 요청이 전달된다. 
  # ClusterIP: 특정 클라이언트의 연결을 동일한 Pod로 전송한다. 
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      # 대상 연결 타임아웃 초 
      timeoutSeconds: 10800
  # 서비스를 위한 포트 정의 
  ports:
  # 포트 이름 
  - name: MYAPP
    # 서비스에 연결을 위한 프로토콜 이름 (기본값이 TCP이다.)
    protocol: TCP
    # 포트: 이는 외부에 연결될 포트이다. 
    port: 
    # 대상 포트: 컨테이너의 포트 
    targetPort: 
    # 타입을 노드포트로 지정한경우 고정할 노드의 포트가 된다. 이 값을 지정하지 않으면 랜덤하게 포트가 변경된다. 
    nodePort:
